--- a/style.css
+++ b/style.css
@@ -235,14 +235,14 @@ nav ul li:hover .dropdown {
 /* Hero image */
 .hero {
     position: relative;
-    height: 300px;
+    height: 250px;
     background-color: #f4f4f4;
     overflow: hidden;
 }
 
 .hero img {
-    width: 100%;
-    height: auto;
+    width: 90%;
+    min-height: 150px;
     position: absolute;
     top: 0;
     left: 0;
