--- a/style.css
+++ b/style.css
@@ -239,15 +239,16 @@ nav ul li:hover .dropdown {
     height: 250px;
     background-color: #f4f4f4;
     overflow: hidden;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .hero img {
     width: 90%;
-    min-height: 150px;
-    position: absolute;
-    margin: 2px;
-    padding: 2px;
-    object-fit: cover;
+    max-width: 100%;
+    height: auto;
+    object-fit: contain;
 }
 
 @media (min-width: 768px) {
