--- a/style.css
+++ b/style.css
@@ -10,6 +10,8 @@ body {
     font-family: Arial, sans-serif;
     background-color: #f4f4f4;
     color: #333;
+    display: flex;
+    flex-direction: row;
 }
 
 .ad-banner {
