--- a/style.css
+++ b/style.css
@@ -599,7 +599,7 @@ nav ul li:hover .dropdown {
 
 table {
     width: 70%;
-    margin: 20px 0;
+    margin: 20px;
     font-size: 1em;
     background-color: #f9f9f9;
     border-radius: 8px;
